cmake_minimum_required(VERSION 2.8)

project(touchstone C)

SET(${PROJECT_NAME}_VERSION_MAJOR 0)
SET(${PROJECT_NAME}_VERSION_MINOR 1)

IF (DESTDIR)
	SET(INSTALLDEST ${DESTDIR})
ENDIF (DESTDIR)

ENABLE_TESTING()

SET(CMAKE_C_FLAGS "-g -Wall")

IF(ENABLE_CASSERT EQUAL 1)
	SET(ENABLE_CASSERT 1)
ELSE()
	UNSET(ENABLE_CASSERT)
ENDIF(ENABLE_CASSERT EQUAL 1)

ADD_SUBDIRECTORY(src)
