[package]
name = "touchstone"
version = "0.1.0"
authors = ["Mark Wong <mark@2ndQuadrant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "2"
chrono = "0"
rand = "0.8"
rand_pcg = "0"
regex = "1"

[[bin]]
name = "touchstone-generate-table-data"
path = "src/generate-table-data.rs"
